# swi-orm

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish_to_pypi.yml
examples/: orm.py  querying.py  simple.py
prolog/: __init__.py  predicate.py  prolog.py  query.py  utils.py
prolog/orm/: __init__.py  exceptions.py  model.py  utils.py
prolog/orm/partial_fields/: __init__.py  field.py
prolog/swipl/: __init__.py  exception.py  swipl.py  syntax.py
