[tool.poetry]
name = "prolog-interface"
version = "0.2"
description = "Keep it easy! Swi-Prolog object-oriented interface for humans."
authors = ["timoniq"]
license = "MIT"
packages = [
    { include = "prolog" }
]

[tool.poetry.dependencies]
python = "^3.7"
pexpect = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
