[tool.poetry]
name = "prolog-interface"
version = "1.0a"
description = "Prolog translator, query builder, ORM"
authors = ["timoniq"]
license = "MIT"
packages = [
    { include = "prolog" }
]

[tool.poetry.dependencies]
python = "^3.7"
pexpect = "^4.8.0"
choicelib = "^0.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
